fix(i18n): add missing translations [CDS 2364]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_fr_CA.json
@@ -65,6 +65,7 @@
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-NSX": "vSphere",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-NSX-VROPS": "vSphere avec vROps",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_VSPHERE-DEFAULT": "vSphere",
   "dedicatedCloud_datacenter_commercial_name_NSX-T": "NSX",
   "dedicatedCloud_datacenter_commercial_name_NSX-T-HDS": "NSX HDS",
   "dedicatedCloud_datacenter_commercial_name_NSX-T-HIPAA": "NSX HIPAA",
@@ -73,6 +74,7 @@
   "dedicatedCloud_datacenter_commercial_name_NSX-T-NSX": "NSX",
   "dedicatedCloud_datacenter_commercial_name_NSX-T-NSX-VROPS": "NSX avec vROps",
   "dedicatedCloud_datacenter_commercial_name_NSX-T-UNKNOWN": "NSX",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-DEFAULT": "NSX",
   "dedicatedCloud_datacenter_host": "Hosts",
   "dedicatedCloud_datacenter_datastore": "Datastores",
   "dedicatedCloud_datacenter_VM_Backup": "VM Backupées",
