--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_de_DE.json
@@ -102,5 +102,7 @@
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-VROPS": "vSphere mit vROps",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-NSX": "vSphere",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-NSX-VROPS": "vSphere mit vROps",
-  "dedicatedCloud_datacenter_commercial_name_VSPHERE-UNKNOWN": "vSphere"
+  "dedicatedCloud_datacenter_commercial_name_VSPHERE-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_VSPHERE-DEFAULT": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-DEFAULT": "NSX"
 }
