--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_pl_PL.json
@@ -97,10 +97,12 @@
   "dedicatedCloud_datacenter_commercial_name_NSX-T-UNKNOWN": "NSX",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE": "vSphere",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-HDS": "vSphere HDS",
-  "dedicatedCloud_datacenter_commercial_name_VSPHERE-HIPAA": "HIPAA vSphere",
+  "dedicatedCloud_datacenter_commercial_name_VSPHERE-HIPAA": "vSphere HIPAA",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-PCIDSS": "vSphere PCI DSS",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-VROPS": "vSphere z vROps",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-NSX": "vSphere",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-NSX-VROPS": "vSphere z vROps",
-  "dedicatedCloud_datacenter_commercial_name_VSPHERE-UNKNOWN": "vSphere"
+  "dedicatedCloud_datacenter_commercial_name_VSPHERE-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_VSPHERE-DEFAULT": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-DEFAULT": "NSX"
 }
