--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_pt_PT.json
@@ -84,5 +84,7 @@
   "dedicatedCloud_datacenters_commercial_name_VSPHERE-VROPS": "vSphere com vROps",
   "dedicatedCloud_datacenters_commercial_name_VSPHERE-NSX": "vSphere",
   "dedicatedCloud_datacenters_commercial_name_VSPHERE-NSX-VROPS": "vSphere com vROps",
-  "dedicatedCloud_datacenters_commercial_name_VSPHERE-UNKNOWN": "vSphere"
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-DEFAULT": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-DEFAULT": "NSX"
 }
