--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/translations/Messages_es_ES.json
@@ -15,6 +15,5 @@
   "pci_projects_project_storages_containers_users_import_success_message": "El archivo JSON asociado al usuario {{user}} se ha descargado correctamente.",
   "pci_projects_project_storages_containers_users_import_error_message": "Se ha producido un error al descargar el archivo JSON asociado al usuario: {{ message }}.",
   "pci_projects_project_storages_containers_users_show_secret_key_success": "La clave secreta de su usuario {{user}} es {{secret}}.",
-  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "Su llave secreta S3:",
-  "pci_projects_project_storages_containers_users_show_secret_key_error": "Se ha producido un error al cargar la clave secreta del usuario {{ user }}: {{ message }}"
+  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "Su llave secreta S3:"
 }
