--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/translations/Messages_it_IT.json
@@ -15,6 +15,5 @@
   "pci_projects_project_storages_containers_users_import_success_message": "Il download del file JSON associato all'utente {{user}} è stato effettuato correttamente.",
   "pci_projects_project_storages_containers_users_import_error_message": "Si è verificato un errore durante il download del file JSON associato all'utente: {{ message }}.",
   "pci_projects_project_storages_containers_users_show_secret_key_success": "La chiave segreta dell’utente {{user}} è {{secret}}.",
-  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "La tua chiave segreta S3:",
-  "pci_projects_project_storages_containers_users_show_secret_key_error": "Si è verificato un errore durante il recupero della chiave segreta dell'utente {{ user }}: {{ message }}"
+  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "La tua chiave segreta S3:"
 }
