--- a/packages/manager/modules/pci/src/projects/project/storages/object-storage/users/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/object-storage/users/translations/Messages_de_DE.json
@@ -14,6 +14,5 @@
   "pci_projects_project_storages_containers_users_download_rclone_file": "Rclone-Datei herunterladen",
   "pci_projects_project_storages_containers_users_see_secret_key": "Den geheimen Schlüssel anzeigen",
   "pci_projects_project_storages_containers_users_show_secret_key_success": "Der geheime Schlüssel des Nutzers {{user}} ist {{secret}}.",
-  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "Ihr geheimer S3-Schlüssel:",
-  "pci_projects_project_storages_containers_users_show_secret_key_error": "Beim Abrufen des geheimen Schlüssels des Nutzers {{ user }} ist ein Fehler aufgetreten: {{ message }}"
+  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "Ihr geheimer S3-Schlüssel:"
 }
