fix(i18n): add missing translations [CDS 2373]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/pci/src/projects/project/private-registry/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/private-registry/translations/Messages_en_GB.json
@@ -7,9 +7,9 @@
   "private_registry_create_registry": "Create a private registry",
   "private_registry_name": "Registry name",
   "private_registry_id": "ID",
-  "private_registry_plan": "Contents",
+  "private_registry_plan": "Plan",
   "private_registry_harbor_version": "Harbor version ",
-  "private_registry_status": "Status",
+  "private_registry_status": "State",
   "private_registry_upgrade_plan": "Change plan",
   "private_registry_consumption": "Space used / Available space",
   "private_registry_consumption_display": "{{ used }} / {{ limit }}",
@@ -19,7 +19,7 @@
   "private_registry_rename": "Rename",
   "private_registry_delete": "Delete private registry",
   "private_registry_delete_confirmation": "Are you sure you want to delete the {{ registryName }} private registry?",
-  "private_registry_delete_warning": "This action cannot be cancelled or reversed.",
+  "private_registry_delete_warning": "This action cannot be cancelled or undone.",
   "private_registry_delete_enter": "Enter DELETE into the following field to confirm your action.",
   "private_registry_delete_success": "Delete the {{ registryName }} private registry",
   "private_registry_delete_error": "An error has occurred deleting the {{ registryName }} private registry: {{ message }}",
@@ -27,12 +27,12 @@
   "private_registry_common_status_READY": "OK",
   "private_registry_common_status_DELETED": "Deleted",
   "private_registry_common_status_SUSPENDED": "Suspended",
-  "private_registry_common_status_INSTALLING": "Installing",
-  "private_registry_common_status_UPDATING": "Updating... ",
-  "private_registry_common_status_RESTORING": "Restoration",
+  "private_registry_common_status_INSTALLING": "Installing...",
+  "private_registry_common_status_UPDATING": "Updating...",
+  "private_registry_common_status_RESTORING": "Reverting...",
   "private_registry_common_status_TO_SUSPENDING": "Suspension",
   "private_registry_common_status_DELETING": "Deleting",
-  "private_registry_common_status_DONE": "Finished",
+  "private_registry_common_status_DONE": "Done",
   "private_registry_common_status_SCALING_UP": "Changing plan",
   "private_registry_guide_main": "Guides",
   "private_registry_header_guides": "Private registry guide",
@@ -71,6 +71,6 @@
   "private_registry_guide_creating_and_using_a_private_image": "Creating and using private images",
   "private_registry_guide_using_private_registry_with_kubernetes": "Using OVHcloud Managed Private Registry with OVHcloud Managed Kubernetes",
   "private_registry_guide_using_the_helm_chart_museum": "Using Helm ChartMuseum",
-  "private_registry_common_cancel": "Cancel",
+  "private_registry_common_cancel": "Exit",
   "private_registry_region": "Region"
 }
