--- a/packages/manager/modules/pci/src/projects/project/private-registry/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/private-registry/translations/Messages_it_IT.json
@@ -1,8 +1,8 @@
 {
   "private_registry_common_create": "Crea",
-  "private_registry_common_confirm": "Conferma",
-  "private_registry_common_close": "Chiudi",
-  "private_registry_common_delete": "Elimina",
+  "private_registry_common_confirm": "Confermare",
+  "private_registry_common_close": "Chiudere",
+  "private_registry_common_delete": "Eliminare",
   "private_registry_title": "Managed Private Registry",
   "private_registry_create_registry": "Crea un Registry privato",
   "private_registry_name": "Nome del Registry",
@@ -22,17 +22,17 @@
   "private_registry_delete_warning": "Questa azione non può essere annullata.",
   "private_registry_delete_enter": "Inserisci DELETE nel campo qui sotto per confermare l’operazione.",
   "private_registry_delete_success": "Elimina il Registro privato {{ registryName }}",
-  "private_registry_delete_error": "Si è verificato un errore durante l’eliminazione del Registry privato {{ registryName }}: {{ message }} ",
+  "private_registry_delete_error": "Si è verificato un errore durante l’eliminazione del Registry privato {{ registryName }}: {{ message }}",
   "private_registry_common_status_ERROR": "Errore",
   "private_registry_common_status_READY": "OK",
   "private_registry_common_status_DELETED": "Eliminato ",
-  "private_registry_common_status_SUSPENDED": "Sospeso",
+  "private_registry_common_status_SUSPENDED": "Sospesa",
   "private_registry_common_status_INSTALLING": "Installazione in corso...",
   "private_registry_common_status_UPDATING": "Aggiornamento in corso...",
   "private_registry_common_status_RESTORING": "Ripristino",
   "private_registry_common_status_TO_SUSPENDING": "Sospensione",
   "private_registry_common_status_DELETING": "Eliminazione in corso...",
-  "private_registry_common_status_DONE": "Terminato",
+  "private_registry_common_status_DONE": "Completato",
   "private_registry_common_status_SCALING_UP": "Cambia offerta",
   "private_registry_guide_main": "Guide",
   "private_registry_header_guides": "Guida sul Registry privato",
@@ -71,6 +71,6 @@
   "private_registry_guide_creating_and_using_a_private_image": "Crea e utilizza immagini private",
   "private_registry_guide_using_private_registry_with_kubernetes": "Utilizza il servizio Managed Private Registry di OVHcloud con OVHcloud Managed Kubernetes",
   "private_registry_guide_using_the_helm_chart_museum": "Utilizza Helm Chart Museum",
-  "private_registry_common_cancel": "Annulla",
-  "private_registry_region": "Regione"
+  "private_registry_common_cancel": "Annullare",
+  "private_registry_region": "Region"
 }
