--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_fr_FR.json
@@ -11,7 +11,7 @@
   "vps_dashboard_tile_configuration_storage_add": "Augmenter le volume de stockage",
   "vps_dashboard_tile_configuration_storage_add_upscale": "Augmenter le stockage en évoluant vers la gamme supérieure",
   "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Faites évoluer votre VPS en augmentant votre stockage",
-  "vps_dashboard_tile_configuration_storage_double": "Doubler l‘espace de stockage pour un prix additionnel de {{ additionalPrice }}/mois, soit un total de {{ price }}/mois",
+  "vps_dashboard_tile_configuration_storage_double": "Doubler l'espace de stockage pour un prix additionnel de {{ additionalPrice }}/mois, soit un total de {{ price }}/mois",
   "vps_dashboard_tile_configuration_starter_range_info_message": "La fonctionnalité vous permettant d'augmenter votre RAM ou votre stockage n'est disponible qu'à partir de l'offre VPS Value.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_title": "Votre modification a bien été prise en compte.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_details": "Vous allez recevoir un e-mail de confirmation dans un délai maximal de deux heures une fois les changements effectifs sur votre VPS. Un redémarrage de votre machine sera nécessaire pour profiter de votre nouvelle configuration.",
