--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_CA.json
@@ -287,8 +287,8 @@
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Les interventions sur le serveur {{serverName}} sont activées.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Les interventions sont désactivées sur le serveur {{serverName}}.",
   "server_configuration_monitoring_update_modal_update_request_failed": "Une erreur est survenue lors du changement d'option de monitoring.",
-  "server_configuration_distribution": "Dernier système d'exploitation (OS) installé par OVHcloud",
-  "server_configuration_distribution_none": "Non installé",
+  "server_configuration_distribution": "Système d'exploitation (OS)",
+  "server_configuration_distribution_none": "Aucun système d'exploitation n'est installé sur votre serveur",
   "server_configuration_distribution_byoi": "BringYourOwnImage",
   "server_configuration_boot": "Boot",
   "server_configuration_datacenter": "Datacentre",
