feat(containers.private-registry): add region column (#9311)
ref: MANAGER-11096
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>
Co-authored-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/pci/src/projects/project/private-registry/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/private-registry/translations/Messages_de_DE.json
@@ -58,18 +58,19 @@
   "private_registry_query_error": "Fehler beim Laden der Private Registries: {{ message }}",
   "private_registry_onboarding_content1": "Sie haben noch kein Managed Private Registry",
   "private_registry_onboarding_content2": "Verwalten Sie das Repository Ihrer Softwarebausteine in Form von Docker-Images oder Helm-Charts.",
-  "private_registry_onboarding_content3": "Verfügen Sie über einen Speicherplatz für Ihre Software-Images und nutzen Sie die Funktionen des Open-Source-Projekts Harbor, um deren Sicherheit zu gewährleisten. Dieser Dienst steht über das Hochleistungsnetzwerk von OVHcloud zur schnelleren Bereitstellung zur Verfügung.",
+  "private_registry_onboarding_content3": "Nutzen Sie einen Speicherplatz für Ihre Software-Images und nutzen Sie die Funktionen des Open-Source-Projekts Harbor, um deren Sicherheit zu gewährleisten. Dieser Dienst steht über das Hochleistungsnetzwerk von OVHcloud zur schnelleren Bereitstellung zur Verfügung.",
   "private_registry_onboarding_action_label": "Registry erstellen",
   "private_registry_onboarding_guides_configure_title": "Private Registry",
   "private_registry_onboarding_guides_registry_title": "Registry verwalten",
   "private_registry_onboarding_guides_deploy_title": "Schnellstart",
   "private_registry_onboarding_generate": "Login-Daten generieren",
-  "private_registry_beta_warning": "Dieses Produkt ist aktuell in der Beta-Version verfügbar. Um fortzufahren, akzeptieren Sie bitte die Bedingungen der Beta-Version.",
-  "private_registry_accept": "Ich akzeptiere",
-  "private_registry_accept_beta_terms": "die Bedingungen der Beta-Version",
+  "private_registry_beta_warning": "Dieses Produkt ist aktuell in der Beta-Version verfügbar. Um fortzufahren, nehmen Sie bitte die Bedingungen für die Beta-Version an.",
+  "private_registry_accept": "Ich nehme",
+  "private_registry_accept_beta_terms": "die Bedingungen der Beta-Version an.",
   "private_registry_new_project_contracts": "Ich habe die folgenden Verträge gelesen und akzeptiere diese: {{ contractsLinks }}.",
   "private_registry_guide_creating_and_using_a_private_image": "Erstellen und Verwenden von privaten Bildern",
   "private_registry_guide_using_private_registry_with_kubernetes": "Verwendung von OVHcloud Managed Private Registry mit OVHcloud Managed Kubernetes",
   "private_registry_guide_using_the_helm_chart_museum": "Verwenden des Helm-Chart-Museums ",
-  "private_registry_common_cancel": "Abbrechen"
+  "private_registry_common_cancel": "Abbrechen",
+  "private_registry_region": "Region"
 }
