--- a/packages/manager/modules/pci/src/projects/project/storages/object-storage/users/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/object-storage/users/translations/Messages_it_IT.json
@@ -4,7 +4,7 @@
   "pci_projects_project_storages_containers_users_description": "Descrizione",
   "pci_projects_project_storages_containers_users_import_json": "Importa S3 Policy (JSON)",
   "pci_projects_project_storages_containers_users_download_json": "Scarica S3 Policy (JSON)",
-  "pci_projects_project_storages_containers_users_user_management": "Gestione utenti",
+  "pci_projects_project_storages_containers_users_user_management": "Gestione degli utenti",
   "pci_projects_project_storages_containers_users_user_description": "Questa sezione permette di aggiungere un nuovo utente S3, ottenere la chiave di accesso e la chiave segreta e gestire le policy S3.",
   "pci_projects_project_storages_containers_users_user_description_warning": "Una volta creato l'utente, sarà necessario generare le credenziali S3 nella sezione \"Users &amp; Roles\".",
   "pci_projects_project_storages_containers_users_add_user": "Aggiungere un utente",
@@ -14,5 +14,6 @@
   "pci_projects_project_storages_containers_users_download_rclone_file": "Scarica il file Rclone",
   "pci_projects_project_storages_containers_users_see_secret_key": "Mostra la chiave segreta",
   "pci_projects_project_storages_containers_users_show_secret_key_success": "La chiave segreta dell’utente {{user}} è {{secret}}.",
-  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "La tua chiave segreta S3:"
+  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "La tua chiave segreta S3:",
+  "pci_projects_project_storages_containers_users_show_secret_key_error": "Si è verificato un errore durante il recupero della chiave segreta dell'utente {{ user }}: {{ message }}"
 }
