--- a/packages/manager/modules/pci/src/projects/project/storages/object-storage/users/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/object-storage/users/translations/Messages_pt_PT.json
@@ -1,6 +1,6 @@
 {
   "pci_projects_project_storages_containers_users_title": "Gestão das credenciais S3",
-  "pci_projects_project_storages_containers_users_username": "Nome do utilizador",
+  "pci_projects_project_storages_containers_users_username": "Nome de utilizador",
   "pci_projects_project_storages_containers_users_description": "Descrição",
   "pci_projects_project_storages_containers_users_import_json": "Importar S3 Policy (JSON)",
   "pci_projects_project_storages_containers_users_download_json": "Download da S3 Policy (JSON)",
@@ -14,5 +14,6 @@
   "pci_projects_project_storages_containers_users_download_rclone_file": "Descarregar o ficheiro rclone",
   "pci_projects_project_storages_containers_users_see_secret_key": "Ver a chave secreta",
   "pci_projects_project_storages_containers_users_show_secret_key_success": "A chave secreta do seu utilizador {{user}} é {{secret}}.",
-  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "A sua chave secreta S3:"
+  "pci_projects_project_storages_containers_users_add_success_field_secret_key": "A sua chave secreta S3:",
+  "pci_projects_project_storages_containers_users_show_secret_key_error": "Ocorreu um erro aquando da recuperação da chave secreta do utilizador {{ user }}: {{ message }}"
 }
