--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_de_DE.json
@@ -805,7 +805,7 @@
   "select_bandwidth_plan_summary": "Bestellübersicht",
   "plan_bandwidth": "{{bandwidth}} Gbit/s unbegrenzt und garantiert",
   "plan_vrack-bandwidth": "{{bandwidth}} Gbit/s unbegrenzt und garantiert - vRack-Option",
-  "server_order_bandwidth_empty_plans": "Es konnte kein Angebot zum Upgraden gefunden werden",
+  "server_order_bandwidth_empty_plans": "Für Ihren Dedicated Server ist kein Bandbreitenangebot verfügbar.",
   "select_traffic_type_label": "Wählen Sie ein Angebot aus",
   "toggle_button_label_ultimate": "Ultimate",
   "toggle_button_label_premium": "Premium",
