--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_CA.json
@@ -767,7 +767,7 @@
   "select_bandwidth_plan_summary": "Récapitulatif de la commande",
   "plan_bandwidth": "{{bandwidth}} Gbit/s illimitée et garantie",
   "plan_vrack-bandwidth": "{{bandwidth}} Gbit/s illimitée et garantie - Option vRack",
-  "server_order_bandwidth_empty_plans": "Impossible de trouver des plans pour mettre à niveau",
+  "server_order_bandwidth_empty_plans": "Aucune offre de bande passante disponible pour votre serveur dédié",
   "select_traffic_type_label": "Sélectionnez une offre",
   "toggle_button_label_ultimate": "Ultimate",
   "toggle_button_label_premium": "Premium",
