--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
@@ -805,7 +805,7 @@
   "select_bandwidth_plan_summary": "Riepilogo dell’ordine",
   "plan_bandwidth": "{{bandwidth}} 50 Gbps illimitata e garantita",
   "plan_vrack-bandwidth": "{{bandwidth}} Gbps illimitata e garantita - Opzione vRack",
-  "server_order_bandwidth_empty_plans": "Impossibile trovare soluzioni per eseguire l’aggiornamento",
+  "server_order_bandwidth_empty_plans": "Non sono disponibili soluzioni di banda passante disponibili per il tuo server dedicato.",
   "select_traffic_type_label": "Seleziona un'offerta",
   "toggle_button_label_ultimate": "Ultimate",
   "toggle_button_label_premium": "Premium",
