--- a/packages/manager/modules/bm-server-components/src/order-private-bandwidth/translations/Messages_es_ES.json
+++ b/packages/manager/modules/bm-server-components/src/order-private-bandwidth/translations/Messages_es_ES.json
@@ -7,7 +7,7 @@
   "server_order_bandwidth_ready": "El pedido está vacío. Una vez abonado el pedido, su ancho de banda enseguida debería estar disponible.",
   "server_order_bandwidth_see_order": "Ver la orden de pedido",
   "server_order_bandwidth_vrack_load": "Cargando ofertas...",
-  "server_order_bandwidth_empty_plans": "No se han podido encontrar planes para mejorar el existente.",
+  "server_order_bandwidth_empty_plans": "No hay ningún servicio de ancho de banda disponible para su servidor dedicado.",
   "select_bandwidth_type_label": "Seleccione un servicio",
   "select_bandwidth_vrack_type_label": "Seleccione un servicio",
   "select_bandwidth_plan_summary": "Resumen del pedido",
