--- a/packages/manager/apps/telecom/src/app/telecom/telephony/service/contact/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/telephony/service/contact/translations/Messages_pt_PT.json
@@ -63,5 +63,9 @@
   "telephony_service_contact_tva": "Número de IVA",
   "telephony_service_contact_tva_invalid": "O NIF introduzido é inválido",
   "telephony_service_contact_sync_error": "Sincronização impossível, queira verificar as suas informações.",
-  "telephony_service_contact_sync_na": "Não aplicável"
+  "telephony_service_contact_sync_na": "Não aplicável",
+  "telephony_service_contact_outwardcode": "Outward code",
+  "telephony_service_contact_inwardcode": "Código inward",
+  "telephony_service_contact_bad_outward": "O código deve ser composto por uma letra seguida de 1 a 3 caracteres alfanuméricos.",
+  "telephony_service_contact_bad_inward": "O código deve ser composto por um número seguido de 2 caracteres alfabéticos."
 }
