--- a/packages/manager/modules/pci/src/projects/new/components/voucher/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/new/components/voucher/translations/Messages_pt_PT.json
@@ -13,5 +13,18 @@
   "pci_projects_new_voucher_title": "Tem um código promocional?",
   "pci_projects_new_voucher_form_field_placeholder": "Código promocional",
   "pci_projects_new_voucher_form_field_add_success": "Parabéns! Acaba de receber {{ credit }} créditos",
-  "pci_projects_new_voucher_form_field_error_too_many_attempt": "Introduziu códigos promocionais errados. Tente novamente mais tarde."
+  "pci_projects_new_voucher_form_field_error_too_many_attempt": "Introduziu códigos promocionais errados. Tente novamente mais tarde.",
+  "pci_projects_new_voucher_form_field_error_voucher_invalid": "O código que introduziu não está correto. Tente novamente.",
+  "pci_projects_new_voucher_form_field_error_voucher_too_many_attempt": "Tentou adicionar um código demasiadas vezes. Agradecemos que espere 1 hora antes de tentar adicionar um código novamente.",
+  "pci_projects_new_voucher_form_field_error_voucher_no_longer_valid": "O código introduzido já não é válido.",
+  "pci_projects_new_voucher_form_field_error_voucher_already_used": "O código que introduziu já foi utilizado.",
+  "pci_projects_new_voucher_form_field_error_voucher_already_used_2": "Já utilizou outro código que não é compatível com este.",
+  "pci_projects_new_voucher_form_field_error_voucher_expired": " O código que introduziu já não é válido.",
+  "pci_projects_new_voucher_form_field_error_voucher_country": "O código que introduziu não está disponível para este país.",
+  "pci_projects_new_voucher_form_field_error_voucher_payment_mean": " Deve introduzir um método de pagamento para poder utilizar este código.",
+  "pci_projects_new_voucher_form_field_error_voucher_too_many_used": " Lamentamos, o número de vezes que o código que introduziu pode ser utilizado foi excedido.",
+  "pci_projects_new_voucher_form_field_error_voucher_nichandle": "O código que introduziu não pode ser utilizado para este ID de cliente.",
+  "pci_projects_new_voucher_form_field_error_voucher_scored": " Lamentamos, a sua conta não é elegível para a utilização deste código.",
+  "pci_projects_new_voucher_form_field_error_voucher_new_customer": "Lamentamos, o código que introduziu só é válido para os novos clientes.",
+  "pci_projects_new_voucher_form_field_error_voucher_new_project": "Lamentamos, já tem um projeto, o código não está disponível."
 }
