fix(i18n): add missing translations [CDS 2387]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/translations/Messages_pl_PL.json
@@ -9,16 +9,16 @@
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part1": "Wybrałeś dodanie wirtualnego DataCenter (vDC) z gamy Premier, w którym NSX jest domyślnie włączony. Nie możemy dodać vDC Premier, dopóki NSX nie zostanie włączony w Twojej infrastrukturze.",
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part2": "Włączenie NSX następuje na stronie głównej infrastruktury VMware i nie wpływa na Twoją infrastrukturę, może potrwać do dwóch godzin, a jego postęp można śledzić w zakładce operacje.",
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part3": "Po włączeniu NSX będziesz mógł wznowić dodawanie wirtualnego DataCenter Premier.",
-  "dedicatedCloud_configuration_add_datacenter_description": "Zarządzanie fejsami to koszty wirtualnych maszyn do zarządzania (np. vCenter, vROps lub Edges NSX) hostowanych poza Twoimi dedykowanymi hostami, dzięki czemu możesz dysponować 100% swoich mocy (procesor, RAM).",
-  "dedicatedCloud_configuration_add_datacenter_cta_submit": "Dodaj serwerownię",
+  "dedicatedCloud_configuration_add_datacenter_description": "Koszty zarządzania to koszty wirtualnych maszyn do zarządzania usługami (np. vCenter, vROps lub Edges NSX) hostowanych poza Twoimi dedykowanymi hostami, dzięki czemu możesz dysponować 100% swoich mocy (procesor, RAM).",
+  "dedicatedCloud_configuration_add_datacenter_cta_submit": "Dodaj centrum danych",
   "dedicatedCloud_configuration_add_datacenter_cta_cancel": "Anuluj",
   "dedicatedCloud_configuration_add_datacenter_card_vsphere_label": "vSphere",
-  "dedicatedCloud_configuration_add_datacenter_card_vsphere_description": "Dodaj wirtualny DataCenter (vDC) vSphere do swojej infrastruktury VMware. Otrzymasz moduły do monitorowania vROps, domyślną licencję vSphere enterprise Plus. Możesz również dodawać hosty vSAN, aby wykorzystać hiperkonwergencję do Twoich dodatkowych potrzeb w zakresie wydajności.",
+  "dedicatedCloud_configuration_add_datacenter_card_vsphere_description": "Dodaj virtual DataCenter (vDC) vSphere do swojej infrastruktury VMware. Otrzymasz moduły do monitorowania vROps, domyślną licencję vSphere enterprise Plus. Możesz również dodawać hosty vSAN, aby wykorzystać hiperkonwergencję do Twoich dodatkowych potrzeb w zakresie wydajności.",
   "dedicatedCloud_configuration_add_datacenter_card_nsx-t_label": "NSX",
-  "dedicatedCloud_configuration_add_datacenter_card_nsx-t_description": "Dodaj wirtualny DataCenter (vDC) NSX do swojej infrastruktury VMware. Oprócz vSphere, vROps dostarczanych domyślnie, będziesz mógł korzystać z najlepszej wirtualizacji sieciowej z NSX. Będziesz mógł chronić swoje wirtualne maszyny dzięki mikrosegmentacji. Możesz również dodawać hosty vSAN, aby wykorzystać hiperkonwergencję do Twoich dodatkowych potrzeb w zakresie wydajności.",
-  "dedicatedCloud_configuration_add_datacenter_card_essentials_label": "Próbki",
-  "dedicatedCloud_configuration_add_datacenter_card_essentials_description": "vSphere as a Service jest prosty i znajomy, łatwy w obsłudze i oszczędny.",
-  "dedicatedCloud_configuration_add_datacenter_card_premier_label": "Pierwszy",
-  "dedicatedCloud_configuration_add_datacenter_card_premier_description": "Silne i zintegrowane rozwiązanie biznesowe oparte na oprogramowaniu zgodnym z normami rynkowymi i ukierunkowane na wydajność i odporność",
+  "dedicatedCloud_configuration_add_datacenter_card_nsx-t_description": "Dodaj virtual DataCenter (vDC) NSX do swojej infrastruktury VMware. Oprócz vSphere, vROps dostarczanych domyślnie, możesz skorzystać z najlepszej wirtualizacji sieciowej z NSX. Możesz chronić swoje wirtualne maszyny dzięki mikrosegmentacji. Możesz również dodawać hosty vSAN, aby wykorzystać hiperkonwergencję do Twoich dodatkowych potrzeb w zakresie wydajności.",
+  "dedicatedCloud_configuration_add_datacenter_card_essentials_label": "Essentials",
+  "dedicatedCloud_configuration_add_datacenter_card_essentials_description": "vSphere as a Service jest intuicyjny, łatwy w obsłudze i ekonomiczny.",
+  "dedicatedCloud_configuration_add_datacenter_card_premier_label": "Premier",
+  "dedicatedCloud_configuration_add_datacenter_card_premier_description": "Wydajne, niezawodne, zintegrowane rozwiązanie dla firm oparte na oprogramowaniu zgodnym z branżowymi standardami",
   "dedicatedCloud_datacenters_add_datacenter_new_price": "{{ price }} w cenie"
 }
