--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/translations/Messages_de_DE.json
@@ -9,16 +9,16 @@
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part1": "Sie möchten ein Virtual Datacenter (vDC) der Reihe Premier hinzufügen. NSX ist für diese Reihe standardmäßig aktiviert. Wir können kein Premier vDC hinzufügen, solange NSX nicht auf Ihrer Infrastruktur aktiviert ist.",
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part2": "Die Aktivierung von NSX erfolgt über die Startseite Ihrer VMware Infrastruktur und beeinträchtigt Ihre Infrastruktur nicht. Dieser Task kann bis zu zwei Stunden in Anspruch nehmen; der Fortschritt lässt sich über den Tab „Operations“ verfolgen.",
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part3": "Nach der Aktivierung von NSX können Sie direkt mit dem Hinzufügen eines Premier Virtual Datacenter fortfahren.",
-  "dedicatedCloud_configuration_add_datacenter_description": "Die Verwaltungsfees entsprechen den Kosten für die Verwaltungs-VMs (zum Beispiel vCenter, vROps oder NSX Edges), die außerhalb Ihrer dedizierten Hosts gehostet werden, sodass Sie über 100% ihrer Kapazität (CPU, RAM) verfügen.",
+  "dedicatedCloud_configuration_add_datacenter_description": "Die Verwaltungsgebühren entsprechen den Kosten für die Management-VMs (zum Beispiel vCenter, vROps oder NSX Edge), die außerhalb Ihrer dedizierten Hosts gehostet werden, sodass Sie über 100 % ihrer Kapazität (CPU, RAM) verfügen.",
   "dedicatedCloud_configuration_add_datacenter_cta_submit": "Ein Datacenter hinzufügen",
   "dedicatedCloud_configuration_add_datacenter_cta_cancel": "Abbrechen",
   "dedicatedCloud_configuration_add_datacenter_card_vsphere_label": "vSphere",
-  "dedicatedCloud_configuration_add_datacenter_card_vsphere_description": "Fügen Sie Ihrer VMware Infrastruktur ein vSphere Virtual DataCenter (vDC) hinzu. Sie profitieren von den standardmäßigen Beobachtungsmodulen vROps und der vSphere Enterprise Plus Lizenz. Sie können auch vSAN-Hosts hinzufügen, um die Hyperkonvergenz für Ihre Anforderungen an zusätzliche Leistung zu nutzen.",
+  "dedicatedCloud_configuration_add_datacenter_card_vsphere_description": "Fügen Sie Ihrer VMware Infrastruktur ein vSphere Virtual DataCenter (vDC) hinzu. Sie profitieren standardmäßig von den vROps-Beobachtungsmodulen und der vSphere Enterprise Plus-Lizenz. Sie können auch vSAN-Hosts hinzufügen, um die Hyperkonvergenz für Ihre zusätzlichen Leistungsanforderungen zu nutzen.",
   "dedicatedCloud_configuration_add_datacenter_card_nsx-t_label": "NSX",
-  "dedicatedCloud_configuration_add_datacenter_card_nsx-t_description": "Fügen Sie Ihrer VMware Infrastruktur ein Virtual DataCenter (vDC) NSX hinzu. Zusätzlich zu vSphere, dem standardmäßig gelieferten vROps, profitieren Sie mit NSX von den Vorteilen der Netzwerkvirtualisierung und können Ihre VMs durch Mikro-Segmentierung schützen. Sie können auch vSAN-Hosts hinzufügen, um die Hyperkonvergenz für Ihre Anforderungen an zusätzliche Leistung zu nutzen.",
+  "dedicatedCloud_configuration_add_datacenter_card_nsx-t_description": "Fügen Sie Ihrer VMware Infrastruktur ein NSX Virtual DataCenter (vDC) hinzu. Zusätzlich zu vSphere und dem standardmäßig bereitgestellten vROps profitieren Sie mit NSX von den Vorteilen der Netzwerkvirtualisierung und können Ihre VMs durch Mikro-Segmentierung schützen. Sie können auch vSAN-Hosts hinzufügen, um die Hyperkonvergenz für Ihre zusätzlichen Leistungsanforderungen zu nutzen.",
   "dedicatedCloud_configuration_add_datacenter_card_essentials_label": "Essentials",
-  "dedicatedCloud_configuration_add_datacenter_card_essentials_description": "vSphere as a Service ist einfach und vertraut, einfach zu verwalten und kostengünstig.",
-  "dedicatedCloud_configuration_add_datacenter_card_premier_label": "Erster",
-  "dedicatedCloud_configuration_add_datacenter_card_premier_description": "Leistungsstarke und integrierte Unternehmenslösung, die auf marktkonformer Software basiert und auf Leistung und Resilienz ausgerichtet ist",
+  "dedicatedCloud_configuration_add_datacenter_card_essentials_description": "vSphere as a Service ist ebenso einfach wie vertraut, leicht in der Handhabung und kostengünstig.",
+  "dedicatedCloud_configuration_add_datacenter_card_premier_label": "Premier",
+  "dedicatedCloud_configuration_add_datacenter_card_premier_description": "Hierbei handelt es sich um eine leistungsstarke und integrierte Lösung für Unternehmen. Sie basiert auf mit den marktüblichen Normen konformer Software und ist auf Leistung und Resilienz ausgelegt.",
   "dedicatedCloud_datacenters_add_datacenter_new_price": "{{ price }} auf Ihre Abrechnung"
 }
