--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/translations/Messages_en_GB.json
@@ -9,16 +9,16 @@
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part1": "You have chosen to add a Virtual Data Center (vDC) from the Premier range, with NSX enabled by default. We cannot add a Premier vDC until NSX is enabled on your infrastructure.",
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part2": "You can enable NSX from your VMware infrastructure homepage — it will not affect your infrastructure. This task can take up to two hours, and you can track its progress from the Operations tab.",
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part3": "Once NSX has been enabled, you can continue adding a Virtual Premier Data Center.",
-  "dedicatedCloud_configuration_add_datacenter_description": "Management fees represent the cost of management VMs (e.g. your vCenter, vROps or Edges NSX) that are hosted outside of your dedicated hosts, allowing you to have 100% of their capacity (CPU, RAM).",
+  "dedicatedCloud_configuration_add_datacenter_description": "Management fees refer to the cost of management VMs (e.g. your vCenter, vROps or NSX Edge) that are hosted outside of your dedicated hosts, that allow you to have 100% of their capacity (CPU, RAM).",
   "dedicatedCloud_configuration_add_datacenter_cta_submit": "Add a datacentre",
-  "dedicatedCloud_configuration_add_datacenter_cta_cancel": "Cancel",
+  "dedicatedCloud_configuration_add_datacenter_cta_cancel": "Exit",
   "dedicatedCloud_configuration_add_datacenter_card_vsphere_label": "vSphere",
-  "dedicatedCloud_configuration_add_datacenter_card_vsphere_description": "Add a vSphere virtual DataCenter (vDC) to your VMware infrastructure. You will get vROps compliance modules, and the vSphere enterprise Plus licence by default. You can also add vSAN hosts to take advantage of hyperconvergence for your additional performance needs.",
+  "dedicatedCloud_configuration_add_datacenter_card_vsphere_description": "Add a vSphere virtual DataCenter (vDC) to your VMware infrastructure. You will get vROps compliance modules, and the vSphere Enterprise Plus licence by default. You can also add vSAN hosts to take advantage of hyperconvergence for your additional performance needs.",
   "dedicatedCloud_configuration_add_datacenter_card_nsx-t_label": "NSX",
-  "dedicatedCloud_configuration_add_datacenter_card_nsx-t_description": "Add an NSX virtual DataCenter (vDC) to your VMware infrastructure. In addition to vSphere, the vROps provided by default, you will benefit from the best of network virtualisation with NSX, you can protect your VMs through micro-segmentation. You can also add vSAN hosts to take advantage of hyperconvergence for your additional performance needs.",
+  "dedicatedCloud_configuration_add_datacenter_card_nsx-t_description": "Add an NSX virtual DataCenter (vDC) to your VMware infrastructure. In addition to vSphere, the vROps provided by default, you will benefit from the best of network virtualisation with NSX, and you can protect your VMs through micro-segmentation. You can also add vSAN hosts to take advantage of hyperconvergence for your additional performance needs.",
   "dedicatedCloud_configuration_add_datacenter_card_essentials_label": "Essentials",
-  "dedicatedCloud_configuration_add_datacenter_card_essentials_description": "vSphere as a Service is simple and familiar, easy to manage and cost effective.",
-  "dedicatedCloud_configuration_add_datacenter_card_premier_label": "First",
-  "dedicatedCloud_configuration_add_datacenter_card_premier_description": "Powerful, integrated enterprise solution, based on industry-standard software and focused on performance and resilience",
+  "dedicatedCloud_configuration_add_datacenter_card_essentials_description": "vSphere-as-a-Service is simple and familiar, easy to manage and cost-effective.",
+  "dedicatedCloud_configuration_add_datacenter_card_premier_label": "Premier",
+  "dedicatedCloud_configuration_add_datacenter_card_premier_description": "It is a powerful, integrated enterprise solution based on industry-standard software, with a focus on both performance and resilience.",
   "dedicatedCloud_datacenters_add_datacenter_new_price": "{{ price }} on your pricing"
 }
