--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/translations/Messages_es_ES.json
@@ -9,16 +9,16 @@
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part1": "Ha elegido añadir un datacenter virtual (vDC) de la gama Premier, en la que NSX está activado por defecto. No es posible añadir un datacenter virtual (vDC) Premier hasta que NSX esté activado en su infraestructura.",
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part2": "Debe activar NSX desde la página de inicio de su infraestructura VMware (esta acción no afectará al funcionamiento de su infraestructura). Tenga en cuenta que la activación puede tardar hasta dos horas. Puede seguir el progreso de la tarea desde la pestaña «Operaciones».",
   "dedicatedCloud_configuration_add_datacenter_description_no_nsx_part3": "Una vez activado NSX, ya podrá añadir un datacenter virtual (vDC) Premier.",
-  "dedicatedCloud_configuration_add_datacenter_description": "Los management fees representan el coste de las MV de gestión (por ejemplo, su vCenter, vROps o los Edges NSX) alojadas fuera de sus hosts dedicados, lo que le permite disponer del 100% de su capacidad (CPU, RAM).",
+  "dedicatedCloud_configuration_add_datacenter_description": "Los gastos de gestión («management fees») representan el coste de las MV de gestión (por ejemplo, su vCenter, vROps o los Edges NSX) que se alojan fuera de sus hosts dedicados, lo que le permite disponer del 100 % de su capacidad (CPU, RAM).",
   "dedicatedCloud_configuration_add_datacenter_cta_submit": "Añadir un datacenter",
   "dedicatedCloud_configuration_add_datacenter_cta_cancel": "Cancelar",
   "dedicatedCloud_configuration_add_datacenter_card_vsphere_label": "vSphere",
-  "dedicatedCloud_configuration_add_datacenter_card_vsphere_description": "Añada un datacenter virtual (vDC) vSphere a su infraestructura VMware. Podrá disfrutar de los módulos de observabilidad vROps y de la licencia vSphere Enterprise Plus por defecto. También podrá añadir hosts vSAN para aprovechar la hiperconvergencia para satisfacer sus necesidades de rendimiento adicional.",
+  "dedicatedCloud_configuration_add_datacenter_card_vsphere_description": "Añada un datacenter virtual vSphere (vDC) a su infraestructura VMware. Podrá disfrutar de los módulos de observabilidad vROps y de la licencia vSphere Enterprise Plus por defecto. También podrá añadir hosts vSAN para sacar el máximo partido a la hiperconvergencia y satisfacer sus necesidades de rendimiento adicional.",
   "dedicatedCloud_configuration_add_datacenter_card_nsx-t_label": "NSX",
-  "dedicatedCloud_configuration_add_datacenter_card_nsx-t_description": "Añada un datacenter virtual (vDC) NSX a su infraestructura VMware. Además de vSphere, vROps incluidos por defecto, usted se beneficiará de lo mejor de la virtualización de red con NSX, podrá proteger sus MV gracias a la microsegmentación. También podrá añadir hosts vSAN para aprovechar la hiperconvergencia para satisfacer sus necesidades de rendimiento adicional.",
-  "dedicatedCloud_configuration_add_datacenter_card_essentials_label": "Essentiales",
-  "dedicatedCloud_configuration_add_datacenter_card_essentials_description": "vSphere as a Service es simple y familiar, fácil de gestionar y económico.",
-  "dedicatedCloud_configuration_add_datacenter_card_premier_label": "Primer",
-  "dedicatedCloud_configuration_add_datacenter_card_premier_description": "Solución empresarial potente e integrada, basada en software estándar del sector y orientada al rendimiento y la resiliencia",
-  "dedicatedCloud_datacenters_add_datacenter_new_price": "{{ price }} en su tarificación"
+  "dedicatedCloud_configuration_add_datacenter_card_nsx-t_description": "Añada un datacenter virtual NSX (vDC) a su infraestructura VMware. Además de vSphere y vROps incluidos por defecto, disfrutará de lo mejor de la virtualización de red con NSX y podrá proteger sus MV gracias a la microsegmentación. Asimismo, podrá añadir hosts vSAN para sacar el máximo partido a la hiperconvergencia y satisfacer sus necesidades de rendimiento adicional.",
+  "dedicatedCloud_configuration_add_datacenter_card_essentials_label": "Essentials",
+  "dedicatedCloud_configuration_add_datacenter_card_essentials_description": "vSphere as a Service es una solución simple, fácil de gestionar y económica.",
+  "dedicatedCloud_configuration_add_datacenter_card_premier_label": "Premier",
+  "dedicatedCloud_configuration_add_datacenter_card_premier_description": "Solución empresarial potente e integrada, basada en programas conformes con las principales normas del mercado y orientada al rendimiento y la resiliencia.",
+  "dedicatedCloud_datacenters_add_datacenter_new_price": "{{ price }} sobre su tarifa"
 }
