--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/dashboard/translations/Messages_fr_CA.json
@@ -66,6 +66,8 @@
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-NSX-VROPS": "vSphere avec vROps",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-UNKNOWN": "vSphere",
   "dedicatedCloud_datacenter_commercial_name_VSPHERE-DEFAULT": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_VSPHERE-WITHOUT-NSX": "vSphere",
+  "dedicatedCloud_datacenter_commercial_name_VSPHERE-VROPS-WITHOUT-NSX": "vSphere avec vROps",
   "dedicatedCloud_datacenter_commercial_name_NSX-T": "NSX",
   "dedicatedCloud_datacenter_commercial_name_NSX-T-HDS": "NSX HDS",
   "dedicatedCloud_datacenter_commercial_name_NSX-T-HIPAA": "NSX HIPAA",
@@ -75,6 +77,8 @@
   "dedicatedCloud_datacenter_commercial_name_NSX-T-NSX-VROPS": "NSX avec vROps",
   "dedicatedCloud_datacenter_commercial_name_NSX-T-UNKNOWN": "NSX",
   "dedicatedCloud_datacenter_commercial_name_NSX-T-DEFAULT": "NSX",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-WITHOUT-NSX": "NSX",
+  "dedicatedCloud_datacenter_commercial_name_NSX-T-VROPS-WITHOUT-NSX": "NSX avec vROps",
   "dedicatedCloud_datacenter_host": "Hosts",
   "dedicatedCloud_datacenter_datastore": "Datastores",
   "dedicatedCloud_datacenter_VM_Backup": "VM Backupées",
