--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_de_DE.json
@@ -248,6 +248,6 @@
   "ip_order_renew_MBM": "Ihre IP-Adressen werden automatisch mit Ihrer Managed Bare Metal Infrastruktur verlängert.",
   "dedicatedCloud_premier_sbg_order_warning": "Wir können auf unserer SBG-Website keine neuen Bestellungen annehmen. Unsere Teams sind voll im Einsatz und wir tun alles, um diese Bestellmöglichkeit in naher Zukunft wiederherzustellen.",
   "ip_order_renew_PCC": "Ihre IP-Adressen werden automatisch mit Ihrer Dedicated Cloud Infrastruktur verlängert.",
-  "dedicatedCloud_banner_new_product": "Ab sofort können Sie Rechenzentren mit unterschiedlichen VMware Softwarepaketen in einer einzigen Private Cloud Umgebung bestellen.",
-  "dedicatedCloud_banner_new_product_link": "Mehr dazu"
+  "dedicatedCloud_banner_new_product": "Ab sofort können Sie Datacenter bestellen, die unterschiedlichen VMware-Softwarepaketen in einer einzigen Private Cloud Umgebung entsprechen.",
+  "dedicatedCloud_banner_new_product_link": "Mehr erfahren"
 }
