--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_es_ES.json
@@ -248,6 +248,6 @@
   "ip_order_renew_MBM": "Sus direcciones IP se renovarán automáticamente con su infraestructura Managed Bare Metal.",
   "dedicatedCloud_premier_sbg_order_warning": "No podemos realizar nuevos pedidos en nuestro sitio web de SBG. Nuestro equipo está plenamente movilizado y hacemos todo lo posible para restablecer esta posibilidad de pedido en un futuro próximo.",
   "ip_order_renew_PCC": "Sus direcciones IP se renovarán automáticamente con su infraestructura Dedicated Cloud.",
-  "dedicatedCloud_banner_new_product": "Ahora puede contratar datacenters para diferentes paquetes de software VMware dentro de un mismo entorno de Private Cloud.",
+  "dedicatedCloud_banner_new_product": "Ya puede contratar datacenters para diferentes paquetes de software VMware dentro de un mismo entorno Private Cloud.",
   "dedicatedCloud_banner_new_product_link": "Más información"
 }
