fix(pcc.vmware): NSX Batch 2 (#9220)
ref: MANAGER-11064

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_it_IT.json
@@ -246,6 +246,8 @@
   "dedicatedCloud_survey_link": "condividere il tuo feedback tramite questa interfaccia.",
   "ip_order_renew_EPCC": "Gli IP verranno rinnovati automaticamente con la tua infrastruttura Dedicated Cloud.",
   "ip_order_renew_MBM": "Gli IP verranno rinnovati automaticamente insieme all’infrastruttura Managed Bare Metal.",
-  "dedicatedCloud_premier_sbg_order_warning": "Al momento non siamo in grado di ricevere nuovi ordini sul sito di Strasburgo (SBG).  I nostri team si sono attivati e si stanno impegnando al massimo per ripristinare la possibilità di effettuare ordini nel minor tempo possibile.",
-  "ip_order_renew_PCC": "Gli IP verranno rinnovati automaticamente con la tua infrastruttura Dedicated Cloud."
+  "dedicatedCloud_premier_sbg_order_warning": "Non siamo in grado di effettuare nuovi ordini sul nostro sito di SBG. I team OVHcloud sono pienamente operativi e stiamo facendo il possibile per ripristinare questa possibilità di ordine nel prossimo futuro.",
+  "ip_order_renew_PCC": "Gli IP verranno rinnovati automaticamente con la tua infrastruttura Dedicated Cloud.",
+  "dedicatedCloud_banner_new_product": "Adesso è possibile selezionare datacenter corrispondenti a pacchetti software VMware differenti all'interno di uno stesso ambiente Private Cloud.",
+  "dedicatedCloud_banner_new_product_link": "Scopri di più"
 }
