--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_CA.json
@@ -61,14 +61,17 @@
   "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-VROPS-WITHOUT-NSX": "SDDC Legacy avec vROps &amp; sans NSX",
   "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-WITHOUT-NSX": "SDDC Legacy sans NSX",
   "dedicatedCloud_datacenters_commercial_name_UNKNOWN-UNKNOWN": "Inconnu",
-  "dedicatedCloud_datacenters_commercial_name_vSphere": "vSphere",
-  "dedicatedCloud_datacenters_commercial_name_vSphere-HDS": "vSphere HDS",
-  "dedicatedCloud_datacenters_commercial_name_vSphere-HIPAA": "vSphere HIPAA",
-  "dedicatedCloud_datacenters_commercial_name_vSphere-PCIDSS": "vSphere PCI DSS",
-  "dedicatedCloud_datacenters_commercial_name_vSphere-VROPS": "vSphere avec vROps",
-  "dedicatedCloud_datacenters_commercial_name_vSphere-NSX": "vSphere",
-  "dedicatedCloud_datacenters_commercial_name_vSphere-NSX-VROPS": "vSphere avec vROps",
-  "dedicatedCloud_datacenters_commercial_name_vSphere-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-HDS": "vSphere HDS",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-HIPAA": "vSphere HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-PCIDSS": "vSphere PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-VROPS": "vSphere avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-NSX": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-NSX-VROPS": "vSphere avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-DEFAULT": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-WITHOUT-NSX": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-VROPS-WITHOUT-NSX": "vSphere avec vROps",
   "dedicatedCloud_datacenters_commercial_name_NSX-T": "NSX",
   "dedicatedCloud_datacenters_commercial_name_NSX-T-HDS": "NSX HDS",
   "dedicatedCloud_datacenters_commercial_name_NSX-T-HIPAA": "NSX HIPAA",
@@ -76,5 +79,8 @@
   "dedicatedCloud_datacenters_commercial_name_NSX-T-VROPS": "NSX avec vROps",
   "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX": "NSX",
   "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX-VROPS": "NSX avec vROps",
-  "dedicatedCloud_datacenters_commercial_name_NSX-T-UNKNOWN": "NSX"
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-UNKNOWN": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-DEFAULT": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-WITHOUT-NSX": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-VROPS-WITHOUT-NSX": "NSX avec vROps"
 }
