--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_es_ES.json
@@ -246,6 +246,8 @@
   "dedicatedCloud_survey_link": "enviarnos su opinión en esta interfaz.",
   "ip_order_renew_EPCC": "Sus direcciones IP se renovarán automáticamente con su infraestructura Dedicated Cloud.",
   "ip_order_renew_MBM": "Sus direcciones IP se renovarán automáticamente con su infraestructura Managed Bare Metal.",
-  "dedicatedCloud_premier_sbg_order_warning": "Le informamos de que no es posible realizar nuevos pedidos de este servicio en nuestra localización de Estrasburgo (SBG). Estamos haciendo todo lo posible para volver a ofrecer esta opción de pedido lo antes posible.",
-  "ip_order_renew_PCC": "Sus direcciones IP se renovarán automáticamente con su infraestructura Dedicated Cloud."
+  "dedicatedCloud_premier_sbg_order_warning": "No podemos realizar nuevos pedidos en nuestro sitio web de SBG. Nuestro equipo está plenamente movilizado y hacemos todo lo posible para restablecer esta posibilidad de pedido en un futuro próximo.",
+  "ip_order_renew_PCC": "Sus direcciones IP se renovarán automáticamente con su infraestructura Dedicated Cloud.",
+  "dedicatedCloud_banner_new_product": "Ya puede contratar datacenters para diferentes paquetes de software VMware dentro de un mismo entorno Private Cloud.",
+  "dedicatedCloud_banner_new_product_link": "Más información"
 }
