--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_pl_PL.json
@@ -246,6 +246,8 @@
   "dedicatedCloud_survey_link": "o opinię na temat tego interfejsu",
   "ip_order_renew_EPCC": "Adresy IP będą odnawiane automatycznie z Twoją infrastrukturą Dedicated Cloud.",
   "ip_order_renew_MBM": "Adresy IP będą odnawiane automatycznie wraz z Twoją infrastrukturą Managed Bare Metal.",
-  "dedicatedCloud_premier_sbg_order_warning": "W chwili obecnej nie jesteśmy w stanie przyjąć nowych zamówień na usługi w obiekcie SBG. Nasze zespoły są w pełni zmobilizowane i dokładamy wszelkich starań, aby jak najszybciej przywrócić możliwość składania zamówień.",
-  "ip_order_renew_PCC": "Adresy IP będą odnawiane automatycznie z Twoją infrastrukturą Dedicated Cloud."
+  "dedicatedCloud_premier_sbg_order_warning": "Nie jesteśmy w stanie złożyć nowych zamówień na naszej stronie SBG. Nasze zespoły są w pełni zmobilizowane i dokładamy wszelkich starań, aby przywrócić w niedalekiej przyszłości możliwość składania zamówień.",
+  "ip_order_renew_PCC": "Adresy IP będą odnawiane automatycznie z Twoją infrastrukturą Dedicated Cloud.",
+  "dedicatedCloud_banner_new_product": "Możesz teraz zamawiać centra danych odpowiadające różnym pakietom oprogramowania VMware w tym samym środowisku Private Cloud.",
+  "dedicatedCloud_banner_new_product_link": "Dowiedz się więcej"
 }
