fix(supercomponent): fix some rules inside supercomponents lib
ref: MANAGER-11577

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/packages/super-components/storybook/stories/Introduction.mdx
+++ b/packages/super-components/storybook/stories/Introduction.mdx
@@ -78,7 +78,7 @@ A super-component contains different files and folders :
 - `screenshot/` the generated screenshots of the e2e tests
 - `src/` the source code of the component
 - `tests/` the folder containing the tests
-- `vue/` the generated react component (you should not touch anything in this folder)
+- `vue/` the generated vue component (you should not touch anything in this folder)
 
 #### Scripts
 
