--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_en_GB.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_en_GB.json
@@ -18,5 +18,15 @@
   "manager_billing_subscription_engagement_status_commitement_pending": "Your service commitment will begin from {{nextBillingDate}}",
   "manager_billing_subscription_engagement_commit_with_discount": "Commit and get a discount",
   "manager_billing_subscription_engagement_commit_again_with_discount": "Re-commit and get a discount",
-  "manager_billing_subscription_offer": "Solution"
+  "manager_billing_subscription_offer": "Solution",
+  "manager_billing_service_status": "Status",
+  "manager_billing_service_status_auto": "Automatic renewal",
+  "manager_billing_service_status_automatic": "Automatic renewal",
+  "manager_billing_service_status_manual": "Manual renewal",
+  "manager_billing_service_status_manualPayment": "Manual renewal",
+  "manager_billing_service_status_pending_debt": "Bill to pay",
+  "manager_billing_service_status_delete_at_expiration": "Cancellation requested",
+  "manager_billing_service_status_expired": "Cancelled",
+  "manager_billing_service_status_billing_suspended": "Deferred billing",
+  "manager_billing_service_status_forced_manual": "Manual renewal"
 }
