--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_fr_FR.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_fr_FR.json
@@ -18,5 +18,15 @@
   "manager_billing_subscription_engagement_status_engaged_renew": "Se renouvelle le {{ endDate }}",
   "manager_billing_subscription_engagement_status_engaged_expired": "Terminé le {{ endDate }}",
   "manager_billing_subscription_engagement_status_commitement_pending": "Votre service sera engagé à partir du {{ nextBillingDate }}",
-  "manager_billing_subscription_offer": "Offre"
+  "manager_billing_subscription_offer": "Offre",
+  "manager_billing_service_status": "Statut",
+  "manager_billing_service_status_auto": "Renouvellement automatique",
+  "manager_billing_service_status_automatic": "Renouvellement automatique",
+  "manager_billing_service_status_manual": "Renouvellement manuel",
+  "manager_billing_service_status_manualPayment": "Renouvellement manuel",
+  "manager_billing_service_status_pending_debt": "Facture à régler",
+  "manager_billing_service_status_delete_at_expiration": "Résiliation demandée",
+  "manager_billing_service_status_expired": "Résilié",
+  "manager_billing_service_status_billing_suspended": "Facturation reportée",
+  "manager_billing_service_status_forced_manual": "Renouvellement manuel forcé"
 }
