--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_it_IT.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_it_IT.json
@@ -18,5 +18,15 @@
   "manager_billing_subscription_engagement_status_commitement_pending": "L’impegno contrattuale del servizio comincerà il {{ nextBillingDate }}",
   "manager_billing_subscription_engagement_commit_with_discount": "Sottoscrivi un impegno contrattuale e usufruisci di uno sconto",
   "manager_billing_subscription_engagement_commit_again_with_discount": "Sottoscrivi un nuovo impegno contrattuale e usufruisci di uno sconto",
-  "manager_billing_subscription_offer": "Servizio"
+  "manager_billing_subscription_offer": "Servizio",
+  "manager_billing_service_status": "Stato",
+  "manager_billing_service_status_auto": "Rinnovo automatico",
+  "manager_billing_service_status_automatic": "Rinnovo automatico",
+  "manager_billing_service_status_manual": "Rinnovo manuale",
+  "manager_billing_service_status_manualPayment": "Rinnovo manuale",
+  "manager_billing_service_status_pending_debt": "Fatture da pagare",
+  "manager_billing_service_status_delete_at_expiration": "Disattivazione richiesta",
+  "manager_billing_service_status_expired": "Disattivato",
+  "manager_billing_service_status_billing_suspended": "Fatturazione rinviata",
+  "manager_billing_service_status_forced_manual": "Rinnovo manuale"
 }
