--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_pl_PL.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_pl_PL.json
@@ -18,5 +18,15 @@
   "manager_billing_subscription_engagement_status_commitement_pending": "Płatność za usługę od {{nextBillingDate}}",
   "manager_billing_subscription_engagement_commit_with_discount": "Wybierz opcję umowy terminowej i skorzystaj z rabatu",
   "manager_billing_subscription_engagement_commit_again_with_discount": "Przedłuż umowę terminową i skorzystaj z rabatu",
-  "manager_billing_subscription_offer": "Usługa"
+  "manager_billing_subscription_offer": "Usługa",
+  "manager_billing_service_status": "Status",
+  "manager_billing_service_status_auto": "Automatyczne odnowienie",
+  "manager_billing_service_status_automatic": "Automatyczne odnowienie",
+  "manager_billing_service_status_manual": "Odnowienie ręczne",
+  "manager_billing_service_status_manualPayment": "Odnowienie ręczne",
+  "manager_billing_service_status_pending_debt": "Płatność do uregulowania",
+  "manager_billing_service_status_delete_at_expiration": "Złożona rezygnacja",
+  "manager_billing_service_status_expired": "Anulowany",
+  "manager_billing_service_status_billing_suspended": "Faktura odroczona",
+  "manager_billing_service_status_forced_manual": "Odnowienie ręczne"
 }
