--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_pt_PT.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_pt_PT.json
@@ -18,5 +18,15 @@
   "manager_billing_subscription_engagement_status_commitement_pending": "O compromisso do seu serviço começará a {{ nextBillingDate }}",
   "manager_billing_subscription_engagement_commit_with_discount": "Subscrever com compromisso e beneficiar de um desconto",
   "manager_billing_subscription_engagement_commit_again_with_discount": "Voltar a subscrever com compromisso e beneficiar de um desconto",
-  "manager_billing_subscription_offer": "Oferta"
+  "manager_billing_subscription_offer": "Oferta",
+  "manager_billing_service_status": "Estado",
+  "manager_billing_service_status_auto": "Renovação automática",
+  "manager_billing_service_status_automatic": "Renovação automática",
+  "manager_billing_service_status_manual": "Renovação manual",
+  "manager_billing_service_status_manualPayment": "Renovação manual",
+  "manager_billing_service_status_pending_debt": "Fatura por pagar",
+  "manager_billing_service_status_delete_at_expiration": "Rescisão solicitada",
+  "manager_billing_service_status_expired": "Rescindido",
+  "manager_billing_service_status_billing_suspended": "Faturação diferida",
+  "manager_billing_service_status_forced_manual": "Renovação manual"
 }
