--- a/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_en_GB.json
@@ -29,5 +29,6 @@
   "pci_notebook_permission_RW": "Read &amp; Write",
   "pci_notebook_permission_RWD": "Read &amp; Write &amp; Delete",
   "pci_notebook_data_cache": "Cache",
-  "pci_notebook_list_status_DELETING": "Deleting"
+  "pci_notebook_list_status_DELETING": "Deleting",
+  "pci_notebook_list_status_SYNC_FAILED": "Synchronization failed"
 }
