--- a/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_pt_PT.json
@@ -29,5 +29,6 @@
   "pci_notebook_permission_RW": "Leitura/Escrita",
   "pci_notebook_permission_RWD": "Leitura, escrita e eliminação",
   "pci_notebook_data_cache": "Cache",
-  "pci_notebook_list_status_DELETING": "Eliminação em curso"
+  "pci_notebook_list_status_DELETING": "Eliminação em curso",
+  "pci_notebook_list_status_SYNC_FAILED": "Falha na sincronização"
 }
