--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_de_DE.json
@@ -32,5 +32,6 @@
   "pci_projects_project_training_jobs_price": "Preis",
   "pci_projects_project_training_jobs_price_estimate": "Geschätzte Zeit, die der Auftrag in Anspruch nehmen wird",
   "pci_projects_project_training_jobs_state_TIMEOUT": "Timeout",
-  "pci_projects_project_training_discord": "OVHcloud AI Community bei Discord"
+  "pci_projects_project_training_discord": "OVHcloud AI Community bei Discord",
+  "pci_projects_project_training_jobs_state_SYNC_FAILED": "Synchronisierungsfehler"
 }
