--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_en_GB.json
@@ -32,5 +32,6 @@
   "pci_projects_project_training_jobs_price": "Price",
   "pci_projects_project_training_jobs_price_estimate": "Estimated job execution time",
   "pci_projects_project_training_jobs_state_TIMEOUT": "Timeout",
-  "pci_projects_project_training_discord": "OVHcloud AI Community Discord"
+  "pci_projects_project_training_discord": "OVHcloud AI Community Discord",
+  "pci_projects_project_training_jobs_state_SYNC_FAILED": "Synchronization failed"
 }
