--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_es_ES.json
@@ -32,5 +32,6 @@
   "pci_projects_project_training_jobs_price": "Precio",
   "pci_projects_project_training_jobs_price_estimate": "Estimación sobre el tiempo de ejecución del job",
   "pci_projects_project_training_jobs_state_TIMEOUT": "Timeout",
-  "pci_projects_project_training_discord": "OVHcloud AI community on Discord"
+  "pci_projects_project_training_discord": "OVHcloud AI community on Discord",
+  "pci_projects_project_training_jobs_state_SYNC_FAILED": "Error de sincronización"
 }
