--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_pl_PL.json
@@ -32,5 +32,6 @@
   "pci_projects_project_training_jobs_price": "Cena",
   "pci_projects_project_training_jobs_price_estimate": "Oszacowanie czasu wykonania zadania",
   "pci_projects_project_training_jobs_state_TIMEOUT": "Timeout",
-  "pci_projects_project_training_discord": "OVHcloud AI community on Discord."
+  "pci_projects_project_training_discord": "OVHcloud AI community on Discord.",
+  "pci_projects_project_training_jobs_state_SYNC_FAILED": "Błąd synchronizacji"
 }
