feat(msc-billing-tile): contact menu
ref: MANAGER-11620

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_de_DE.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_de_DE.json
@@ -50,5 +50,7 @@
   "billing_services_actions_menu_see_dashboard": "Dienstdetails anzeigen",
   "billing_services_actions_menu_commit": "Meine Abonnementlaufzeit verwalten",
   "billing_services_actions_menu_commit_cancel": "Abonnementbestellung mit fester Laufzeit stornieren",
-  "billing_services_actions_menu_resiliate_my_engagement": "Meine Vertragsbindung kündigen"
+  "billing_services_actions_menu_resiliate_my_engagement": "Meine Vertragsbindung kündigen",
+  "billing_services_actions_menu_change_owner": "Inhaber ändern",
+  "billing_services_actions_menu_configuration_update_owner": "Angaben des Inhabers aktualisieren"
 }
