--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_en_GB.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_en_GB.json
@@ -50,5 +50,7 @@
   "billing_services_actions_menu_see_dashboard": "View service details",
   "billing_services_actions_menu_commit": "Manage my commitment",
   "billing_services_actions_menu_commit_cancel": "Cancel subscription request",
-  "billing_services_actions_menu_resiliate_my_engagement": "Cancel subscription"
+  "billing_services_actions_menu_resiliate_my_engagement": "Cancel subscription",
+  "billing_services_actions_menu_change_owner": "Change owner",
+  "billing_services_actions_menu_configuration_update_owner": "Refresh holder information"
 }
