--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_fr_FR.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_fr_FR.json
@@ -50,5 +50,7 @@
   "billing_services_actions_menu_resiliate_cancel": "Annuler la résiliation du service",
   "billing_services_actions_menu_see_dashboard": "Voir le détail du service",
   "billing_services_actions_menu_commit": "Gérer mon engagement",
-  "billing_services_actions_menu_commit_cancel": "Annuler la demande d'engagement"
+  "billing_services_actions_menu_commit_cancel": "Annuler la demande d'engagement",
+  "billing_services_actions_menu_change_owner": "Changer de propriétaire",
+  "billing_services_actions_menu_configuration_update_owner": "Actualiser les informations du propriétaire"
 }
