--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_it_IT.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_it_IT.json
@@ -50,5 +50,7 @@
   "billing_services_actions_menu_see_dashboard": "Mostra i dettagli del server",
   "billing_services_actions_menu_commit": "Gestisci il tuo impegno contrattuale",
   "billing_services_actions_menu_commit_cancel": "Annulla la richiesta di sottoscrizione di un impegno contrattuale",
-  "billing_services_actions_menu_resiliate_my_engagement": "Rescindi l’impegno contrattuale"
+  "billing_services_actions_menu_resiliate_my_engagement": "Rescindi l’impegno contrattuale",
+  "billing_services_actions_menu_change_owner": "Modifica proprietario",
+  "billing_services_actions_menu_configuration_update_owner": "Aggiorna le informazioni del proprietario"
 }
