--- a/packages/super-components/components/msc-billing-tile/src/translations/Messages_pt_PT.json
+++ b/packages/super-components/components/msc-billing-tile/src/translations/Messages_pt_PT.json
@@ -50,5 +50,7 @@
   "billing_services_actions_menu_see_dashboard": "Ver os detalhes do serviço",
   "billing_services_actions_menu_commit": "Gerir o meu compromisso",
   "billing_services_actions_menu_commit_cancel": "Anular o pedido de compromisso",
-  "billing_services_actions_menu_resiliate_my_engagement": "Rescindir o meu compromisso"
+  "billing_services_actions_menu_resiliate_my_engagement": "Rescindir o meu compromisso",
+  "billing_services_actions_menu_change_owner": "Alterar titular",
+  "billing_services_actions_menu_configuration_update_owner": "Atualizar as informações do titular"
 }
